kubernetes/apps/checkup/app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: checkup
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkup
  namespace: checkup
  labels:
    app: checkup
spec:
  replicas: 1
  selector:
    matchLabels:
      app: checkup
  template:
    metadata:
      labels:
        app: checkup
    spec:
      containers:
        - name: checkup
          image: registry.sh-lucas.dev/checkup:2026.07.09--018--83a86de # {"$imagepolicy": "flux-system:checkup"}
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 50m
              memory: 128Mi
            requests:
              cpu: 5m
              memory: 32Mi
          volumeMounts:
            - name: db
              mountPath: /data
      volumes:
        - name: db
          persistentVolumeClaim:
            claimName: checkup-db
